--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "react": "^17.0.2",
+    "react-country-flag": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
